# ros_repo

./: file_equal.py  is_ros_workspace.sh  launch_package.sh  logger.launch  rviz_lab.py
.ssh/: id_rsa  id_rsa.pub
3/: launch.sh  o_node.cpp  rviz_lab.py
3/3.1.2/answer/: CMakeLists.txt  correct_nodes.txt  correct_output_marker.txt  correct_topics.txt  input_points.txt  launch.launch  main.cpp  package.xml
3/3.1.2/checker/: CMakeLists.txt  package.xml  publisher.cpp  subscriber.cpp
3/3.2/: consists_no_errors.py  test.sh
3/3.2/example_pkg/: CMakeLists.txt  node1.cpp  node3.cpp  package.xml
3/3.2/sample_pkg/: CMakeLists.txt  node2.cpp  package.xml
3/3.3.1/: correct_nodes.txt  correct_output.txt  correct_topics.txt  input.txt
3/3.3.1/checker/: CMakeLists.txt  l.launch  package.xml  publisher.cpp  subscriber.cpp
3/3.3.1/tfconverter/: CMakeLists.txt  main.cpp  package.xml
answers/publisher_subscriber/: is_correct.sh  predict.txt
answers/service/: nodes.txt
lab1/: is_correct_package.sh  is_ros_workspace.sh
logger/: CMakeLists.txt  topics.txt
logger/src/: main.cpp
publisher_subscriber/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
publisher_subscriber/devel/lib/logger/: logger
publisher_subscriber/devel/lib/package/: node  subscriber
publisher_subscriber/devel/lib/pkgconfig/: logger.pc  package.pc  subscriber.pc
publisher_subscriber/devel/lib/subscriber/: subscriber
publisher_subscriber/devel/share/logger/cmake/: loggerConfig.cmake
publisher_subscriber/devel/share/package/cmake/: packageConfig.cmake
publisher_subscriber/devel/share/subscriber/cmake/: subscriberConfig.cmake
publisher_subscriber/src/logger/: CMakeLists.txt
publisher_subscriber/src/package/: CMakeLists.txt  simple_publisher.launch
publisher_subscriber/src/package/src/: simple_publisher.cpp
publisher_subscriber/src/subscriber/: CMakeLists.txt  launch.launch  nodes  topics
publisher_subscriber/src/subscriber/src/: simple_subscriber.cpp
talkers/src/: create_package.sh  get_message.sh
workspace/logger/: nodes.txt  package.xml
workspace/service/: CMakeLists.txt  create_client.sh  package.xml
workspace/service/src/: server.cpp
workspace/service/srv/: Concat.srv
