<?xml version="1.0"?>
<package>
  <name>example_pkg</name>
  <version>0.0.0</version>
  <description>The package1 package</description>
  <maintainer email="artem@todo.todo">artem</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <export>
  </export>
</package>
