<?xml version="1.0"?>
<package>
  <name>tfconverter</name>
  <version>0.0.0</version>
  <description>The tfconverter package</description>
  <maintainer email="artem@todo.todo">artem</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
